--- a/style_black.css
+++ b/style_black.css
@@ -11,7 +11,14 @@ nav a{
 nav a:hover{
     background-color: gray;
 }
+.color{
+    display:inline;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+}
 a{
+    color:white;
+}
+p{
     color:white;
 }
 .chartecomplete:hover:before{
