--- a/style_white.css
+++ b/style_white.css
@@ -6,6 +6,7 @@
 }
 nav a{
     color:white;
+    font-family: fantasy;
     text-decoration: none;
 }
 nav a:hover{
@@ -17,25 +18,32 @@ nav a:hover{
 }
 a{
     color:black;
+    font-family: fantasy;
 }
 p{
     color:black;
+    font-family: fantasy;
 }
 .chartecomplete:hover:before{
     content:">>";
+    font-family: fantasy;
 }
 body{
     background-color: white;
 }
 h1{
     color: black;
+    font-family: fantasy;
 }
 h1:hover{
     color:red;
+    font-family: fantasy;
 }
 li{
     color: black;
+    font-family: fantasy;
 }
 div{
     color: black;
+    font-family: fantasy;
 }
